--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 @import url(./fonts/InterWeb/inter.css);
 @import url(./blocks/container/container.css);
 @import url(./blocks/container/__semitransparent/container__semitransparent.css);
+@import url(./blocks/container/__semitransparent/_active/container__semitransparent_active.css);
 @import url(./blocks/page/page.css);
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__span/header__span.css);
